--- a/.project
+++ b/.project
@@ -1,5 +1,5 @@
 <projectDescription>
-  <name>zlexpense</name>
+  <name>gittest1</name>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.jdt.core.javabuilder</name>
